--- a/aws-encryption-sdk-cpp/CMakeLists.txt
+++ b/aws-encryption-sdk-cpp/CMakeLists.txt
@@ -118,10 +118,9 @@ if (AWS_ENC_SDK_KNOWN_GOOD_TESTS)
     # TODO-RS: If desired, we can use a custom target to avoid doing this
     # on every build when the zip hasn't changed.
     message(STATUS "Unzipping test vectors")
-    set(TEST_VECTORS_ZIP_FILE ${CMAKE_CURRENT_SOURCE_DIR}/tests/test_vectors/aws-encryption-sdk-test-vectors/vectors/awses-decrypt/python-1.3.8.zip)
-    set(TEST_VECTORS_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/python-1.3.8-test-vectors)
+    set(TEST_VECTORS_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/test-vectors)
     file(MAKE_DIRECTORY ${TEST_VECTORS_DIRECTORY})
-    execute_process(COMMAND ${CMAKE_COMMAND} -E tar xvf ${TEST_VECTORS_ZIP_FILE}
+    execute_process(COMMAND ${CMAKE_COMMAND} -E tar xvf ${AWS_ENC_SDK_TEST_VECTORS_ZIP}
         WORKING_DIRECTORY ${TEST_VECTORS_DIRECTORY}
         RESULT_VARIABLE _exit_code
         # The output from the subprocess seems to fill a buffer and cause cmake
