Disable pointer-overflow check for aws_cryptosdk_hdr_write
Signed-off-by: Felipe R. Monteiro <felisous@amazon.com>

--- a/verification/cbmc/proofs/aws_cryptosdk_hdr_write/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_hdr_write/Makefile
@@ -17,6 +17,9 @@ sinclude ../Makefile.local
 include ../Makefile.local_default
 include ../Makefile.aws_byte_buf
 
+# Disable pointer overflow check
+CBMC_FLAG_POINTER_OVERFLOW_CHECK=
+
 PROOF_UID = aws_cryptosdk_hdr_write
 
 HARNESS_ENTRY = $(PROOF_UID)_harness
