--- a/verification/cbmc/proofs/aws_cryptosdk_serialize_frame/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_serialize_frame/Makefile
@@ -34,12 +34,10 @@ PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/utils.c
 PROOF_SOURCES += $(PROOFDIR)/$(HARNESS_FILE)
 PROOF_SOURCES += $(PROOF_SOURCE)/make_common_data_structures.c
 
+# We abstract this function because manual inspection demonstrates it is unreachable.
+# Improves coverage metrics.
 REMOVE_FUNCTION_BODY += aws_byte_cursor_advance
-REMOVE_FUNCTION_BODY += aws_byte_cursor_advance_nospec
-REMOVE_FUNCTION_BODY += aws_byte_cursor_read
 REMOVE_FUNCTION_BODY += aws_byte_cursor_read_be32
 REMOVE_FUNCTION_BODY += aws_byte_cursor_read_be64
-REMOVE_FUNCTION_BODY += __CPROVER_file_local_byte_order_inl_aws_ntoh32
-REMOVE_FUNCTION_BODY += __CPROVER_file_local_byte_order_inl_aws_ntoh64
 
 include ../Makefile.common
