Mark high-memory usage proofs as EXPENSIVE
This commit marks the four proofs with the highest memory requirements
as EXPENSIVE, meaning that Litani will not run those four proofs in
parallel.

Prior to this commit, the proofs required the following
resources:

* Coverage checks:
  aws_cryptosdk_keyring_trace_copy_all: ~16 GB

* Safety checks:
  aws_cryptosdk_keyring_trace_copy_all: ~16 GB
  aws_cryptosdk_keyring_trace_eq: ~12GB
  aws_cryptosdk_enc_ctx_size: ~11GB
  aws_cryptosdk_priv_try_gen_key: ~11GB

--- a/verification/cbmc/proofs/aws_cryptosdk_enc_ctx_size/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_enc_ctx_size/Makefile
@@ -58,4 +58,6 @@ UNWINDSET += aws_cryptosdk_enc_ctx_size.0:$(call addone,$(MAX_TABLE_SIZE))
 UNWINDSET += memset_override_0_impl.0:$(call addone,$(TABLE_SIZE_IN_WORDS))
 ###########
 
+EXPENSIVE = true
+
 include ../Makefile.common
