--- a/.github/workflows/osx.yml
+++ b/.github/workflows/osx.yml
@@ -34,8 +34,9 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: "aws/aws-sdk-cpp"
-          ref: "1.8.32"
+          ref: "1.9.124"
           path: "aws-sdk-cpp"
+          submodules: recursive
 
       - name: Install dependencies
         run:
