--- a/.github/workflows/osx.yml
+++ b/.github/workflows/osx.yml
@@ -11,7 +11,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [macOS-10.15, macos-latest]
+        os: [macos-11, macos-latest]
         openssl_version: [openssl@1.1]
 
     steps:
