--- a/.github/workflows/proof_ci.yaml
+++ b/.github/workflows/proof_ci.yaml
@@ -153,7 +153,7 @@ jobs:
       - name: Run CBMC proofs
         shell: bash
         working-directory: ${{ env.PROOFS_DIR }}
-        run: ${{ env.RUN_CBMC_PROOFS_COMMAND }}
+        run: ${{ env.RUN_CBMC_PROOFS_COMMAND }} --verbose --debug
       - name: Check repository visibility
         shell: bash
         run: |
